fix login modal spacing

--- a/frontend/src/components/LoginFormModal/LoginFormPage.css
+++ b/frontend/src/components/LoginFormModal/LoginFormPage.css
@@ -14,12 +14,23 @@
     justify-content: center;
 }
 
+.login-modal-heading {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 572px;
+    height: 50px;
+    margin-top: -25px;
+    border-bottom: 1px solid rgb(237, 237, 237);
+
+}
+
 #login-text{
     display: flex;
-    position: relative;
-    justify-content: flex-end;
+    align-items: center;
+    justify-content: center;
     font-family: -apple-system,BlinkMacSystemFont, 'Segoe UI', Roboto,Oxygen, Ubuntu, Cantarell, 'Open Sans','Helvetica Neue', sans-serif;
-    width: 250px;
+    margin-left: 210px;
 }
 
 
@@ -35,9 +46,16 @@
     font-family: -apple-system,BlinkMacSystemFont, 'Segoe UI', Roboto,Oxygen, Ubuntu, Cantarell, 'Open Sans','Helvetica Neue', sans-serif;
     font-size: 15px;
 }
-#welcome-text{
+
+.welcome-text{
+    display: flex;
+    height: 30px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
+    margin-top: 30px;
+    font-size: 20px;
+    width: 100%;
+    margin: 30px 0px 20px 60px;
 }
 
 .password-field1 {
@@ -53,7 +71,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 300;
     padding: 10px 0px 0px 13px;
-   
+    margin-bottom: 20px;
 }
 
 .input-field:focus {
@@ -87,6 +105,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
     cursor: pointer;
+    margin-bottom: 8px;
 
 }
 
@@ -101,6 +120,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
     cursor: pointer;
+    margin-bottom: 12px;
 }
 
 .login-ruler {
@@ -108,14 +128,14 @@
     align-items: center;
     justify-content: center;
     border-bottom: 0.5px solid #c8c8c8;
-    width: 244px;
+    width: 200px;
 }
 
 .login-developer-links {
-    margin-top: 5px;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 10px;
 }
 
 #login-developer-button:hover {
